<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reporte_de_horas_brabajadas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/ingrese_la_hora_de_ingreso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edt_HoradeIngreso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/ingrese_su_hora_de_salida"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edt_HoradeSalida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="@+id/edt_HoradeIngreso"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/edt_HoradeIngreso" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/ingrese_su_sueldo_bruto"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/edt_sueldoBruto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/edt_HoradeSalida"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/edt_HoradeSalida" />

    <Button
        android:id="@+id/button_CalcularPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calcular_pago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_sueldoBruto" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reporte_final"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_CalcularPago" />

    <TextView
        android:id="@+id/txv_HotasTotales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/horas_totales"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txv_HorasEfectivas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/horas_efectivas"
        app:layout_constraintStart_toStartOf="@+id/txv_HotasTotales"
        app:layout_constraintTop_toBottomOf="@+id/txv_HotasTotales" />

    <TextView
        android:id="@+id/txv_HorasExtra20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/horas_extra_al_20"
        app:layout_constraintStart_toStartOf="@+id/txv_HorasEfectivas"
        app:layout_constraintTop_toBottomOf="@+id/txv_HorasEfectivas" />

    <TextView
        android:id="@+id/txv_HorasExtra30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/horas_extra_al_30"
        app:layout_constraintStart_toStartOf="@+id/txv_HorasExtra20"
        app:layout_constraintTop_toBottomOf="@+id/txv_HorasExtra20" />

    <TextView
        android:id="@+id/txv_PagoHorasExtra20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pago_de_horas_extras_al_20"
        app:layout_constraintStart_toStartOf="@+id/txv_HorasExtra30"
        app:layout_constraintTop_toBottomOf="@+id/txv_HorasExtra30" />

    <TextView
        android:id="@+id/txv_PagoHorasExtra30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pago_de_horas_extras_al_30"
        app:layout_constraintStart_toStartOf="@+id/txv_PagoHorasExtra20"
        app:layout_constraintTop_toBottomOf="@+id/txv_PagoHorasExtra20" />

    <TextView
        android:id="@+id/txv_MontoaPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/monto_total_a_pagar"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txv_PagoHorasExtra30"
        app:layout_constraintTop_toBottomOf="@+id/txv_PagoHorasExtra30" />
</androidx.constraintlayout.widget.ConstraintLayout>